# FairWorkly

./: .gitignore  Makefile  README.md  docker-compose.ec2.yml  docker-compose.yml  package-lock.json
agent-service/: .dockerignore  .env.example  Dockerfile  Dockerfile copy or  README.md  agent.py  config.yaml  errors.py  ingested_documents.json  llm.py  main.py  pyproject.toml  readme.md  requirements.txt  system_prompt.txt
agent-service/agents/compliance/: __init__.py  compliance_feature.py  feature.py  prompt.yaml  prompt_builder.py  rag.py  router.py  system_prompt.txt
agent-service/agents/debate/: feature.py  models.py
agent-service/agents/employee/: README.md  __init__.py  chat_handler.py  employee_feature.py  leave_handler.py  payslip_handler.py  roster_handler.py
agent-service/agents/payroll/: __init__.py  feature.py  models.py
agent-service/agents/roster/: __init__.py  explain_feature.py  feature.py
agent-service/agents/shared/: README.md  __init__.py  chroma_client.py  file_handler.py  prompt_builder_base.py  rag_retriever.py  roster_excel_parser.py
agent-service/document_faiss/customer_1/: index.faiss  index.pkl
agent-service/master_agent/: config.py  demo_feature.py  feature_registry.py  intent_router.py  main.py
agent-service/master_agent/features/: compliance_feature.py  demo_feature.py  roster_feature.py
agent-service/master_agent/services/: __init__.py  backend_client.py
agent-service/scripts/: ingest_assets_to_faiss.py
agent-service/shared/: __init__.py  config.py  document_manager.py  document_processor.py  embeddings.py  logging.py  model.py  query_handler.py  vector_store.py
agent-service/shared/llm/: anthropic_provider.py  embeddings_factory.py  factory.py  history_utils.py  langchain_base.py  openai_provider.py
agent-service/shared/rag/: __init__.py  rag_client.py  retriever_manager.py
agent-service/templates/: roster_template.xlsx
agent-service/tests/: test_anthropic_provider.py  test_debate_feature.py  test_health.py  test_master_agent.py  test_rag_smoke.py  test_roster_excel_parser.py  test_service.py
(+944 files in other folders)
