[project]
name = "fairworkly-agent-service"
version = "0.1.0"
description = "FastAPI service hosting FairWorkly's compliance agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
